--- a/src/components/furniture-list/Furniture-list.module.css
+++ b/src/components/furniture-list/Furniture-list.module.css
@@ -95,10 +95,7 @@
     border-radius: 7px;
 }
 
-.dropDownContainer:hover {
-    border-color: #C0C0C0;
-    ;
-}
+
 
 
 
@@ -181,4 +178,16 @@
 
 .show {
     display: none;
+}
+
+.modal__close {
+    position: absolute;
+    top: -10px;
+    right: 0px;
+    font-size: 27px;
+    color: #F0F0F0;
+    font-weight: 700;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
 }
