--- a/src/components/slider/Slider.module.css
+++ b/src/components/slider/Slider.module.css
@@ -1,68 +1,104 @@
-.sliderContainer {
-    width: 700px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 .slider {
     position: relative;
     width: 710px;
-    /* Задайте власну ширину слайдера */
-    height: 520px;
-    /* Задайте власну висоту слайдера */
-    overflow: hidden;
 }
 
-.slide {
-    background-size: cover;
-    object-fit: cover;
-    background-position: center;
+.mainImage {
+    position: relative;
     width: 710px;
     height: 520px;
-}
-
-.arrow {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 24px;
-    color: white;
-    background-color: rgba(0, 0, 0, 0.5);
-    width: 40px;
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    overflow: hidden;
     cursor: pointer;
 }
 
-.arrowLeft {
-    left: 5px;
-}
-
-.arrowRight {
-    right: 5px;
-}
-
-.thumbnailContainer {
-    width: 500px;
-    display: flex;
-    justify-content: center;
+.thumbnails {
     margin-top: 10px;
 }
 
 .thumbnail {
-    width: 100px;
-    height: 70px;
-    object-fit: cover;
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+    border: 2px solid #444;
     cursor: pointer;
-    opacity: 0.6;
-    transition: opacity 0.3s ease;
-    margin-right: 5px;
 }
 
-.thumbnail.active {
-    opacity: 1;
-    width: 500px;
+.active {
+    border-color: #fff;
+}
+
+.previousButton,
+.nextButton {
+    background-color: #444;
+    color: #fff;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+}
+
+.nextButton {
+    position: absolute;
+    top: 45%;
+    right: 0;
+}
+
+.previousButton {
+    position: absolute;
+    top: 45%;
+    left: 0;
+}
+
+.fullscreenSlider {
+    background-color: #000;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.fullscreenImage {
+    max-height: 90%;
+    max-width: 90%;
+    object-fit: contain;
+    cursor: pointer;
+}
+
+.closeButton {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: #444;
+    color: #fff;
+    border: none;
+    padding: 5px 10px;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.nextButtonBIG,
+.previousButtonBIG {
+    width: 250px;
+    height: 100px;
+    background-color: #444;
+    color: #fff;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+}
+
+.nextButtonBIG {
+    position: absolute;
+    top: 45%;
+    right: 5%;
+}
+
+.previousButtonBIG {
+    position: absolute;
+    top: 45%;
+    left: 5%;
 }
