--- a/src/components/slider/Slider.module.css
+++ b/src/components/slider/Slider.module.css
@@ -69,22 +69,28 @@
 }
 
 .closeButton {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background-color: #444;
+    position: fixed;
+    top: 55px;
+    right: 380px;
+    background-color: #222121;
     color: #fff;
     border: none;
-    padding: 5px 10px;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: 18px;
     cursor: pointer;
+    z-index: 9999;
 }
 
 .nextButtonBIG,
 .previousButtonBIG {
     width: 250px;
     height: 100px;
-    background-color: #444;
+    background-color: #222121;
     color: #fff;
     border: none;
     padding: 5px 10px;
