--- a/src/components/furniture-list/Furniture-list.module.css
+++ b/src/components/furniture-list/Furniture-list.module.css
@@ -35,6 +35,7 @@
 
 
 .catalogButton {
+
     height: 60px;
     width: 240px;
     text-align: start;
@@ -47,12 +48,8 @@
     font-weight: 600;
 }
 
-.hover:hover {
-    border: 2px solid #646464;
-    border-radius: 10px;
-}
-
 .inputSearch {
+    top: 0;
     padding-left: 20px;
     position: absolute;
     left: 250px;
@@ -72,6 +69,7 @@
 }
 
 .dropDownImg {
+
     position: absolute;
     left: 182px;
     top: 27px;
@@ -190,4 +188,154 @@
     border: none;
     background-color: transparent;
     cursor: pointer;
+}
+
+@media (max-width: 1340px) {
+
+    .dropDownContainer {
+        width: 992px;
+    }
+
+}
+
+@media (max-width: 992px) {
+
+
+    .dropDownContainer {
+        width: 900px;
+    }
+
+    .furniture__img {
+        width: 270px;
+        height: 220px;
+
+    }
+
+    .furniture {
+        width: 270px;
+    }
+}
+
+
+@media (max-width: 900px) {
+
+
+    .dropDownContainer {
+        width: 800px;
+    }
+
+    .furniture__img {
+        width: 300px;
+        height: 220px;
+    }
+
+    .furniture {
+        width: 300px;
+    }
+}
+
+@media (max-width: 768px) {
+
+
+    .dropDownContainer {
+        width: 700px;
+    }
+}
+
+@media (max-width: 700px) {
+
+
+    .dropDownContainer {
+        width: 640px;
+    }
+}
+
+@media (max-width: 640px) {
+
+
+    .dropDownContainer {
+        width: 570px;
+    }
+
+    .furniture__img {
+        width: 280px;
+        height: 190px;
+
+    }
+
+    .furniture {
+        width: 280px;
+    }
+
+
+}
+
+@media (max-width: 576px) {
+
+
+    .dropDownContainer {
+        width: 500px;
+    }
+
+
+    .inputSearch {
+        position: absolute;
+        z-index: 1;
+        top: 70px;
+        left: 0;
+
+    }
+
+    .furniture__img {
+        width: 350px;
+        height: 250px;
+
+    }
+
+    .furniture {
+        margin-top: 100px;
+        width: 350px;
+    }
+
+    .modal__img {
+        width: 370px;
+        height: 260px;
+    }
+
+
+}
+
+@media (max-width: 500px) {
+    .dropDownContainer {
+        width: 420px;
+    }
+
+
+
+
+}
+
+@media (max-width: 420px) {
+    .dropDownContainer {
+        width: 350px;
+    }
+
+    .furniture__img {
+        width: 300px;
+        height: 200px;
+
+    }
+
+    .furniture {
+        margin-top: 100px;
+        width: 300px;
+    }
+
+    .modal__img {
+        width: 300px;
+        height: 200px;
+    }
+
+
+
 }
