--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -49,7 +49,7 @@
 .ul {
     margin-top: 10px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 500px;
 }
 
@@ -67,5 +67,18 @@
 
 .a:hover {
     color: #F0F0F0;
+
+}
+
+@media (max-width: 500px) {
+    .ul {
+        display: inline;
+    }
+
+    .a {
+        font-size: 14px;
+        font-weight: 500;
+    }
+
 
 }
