--- a/src/components/imageComponent/ImageViewer.module.css
+++ b/src/components/imageComponent/ImageViewer.module.css
@@ -53,3 +53,175 @@
     cursor: pointer;
     z-index: 9999;
 }
+
+
+@media (max-width: 1340px) {
+
+
+    .fullscreen img {
+
+        width: 1290px;
+
+    }
+}
+
+@media (max-width: 1200px) {
+
+    .fullscreen img {
+
+        width: 1150px;
+
+    }
+}
+
+@media (max-width: 1100px) {
+
+    .fullscreen img {
+
+        width: 1050px;
+
+    }
+}
+
+@media (max-width: 992px) {
+
+    .fullscreen img {
+
+        width: 942px;
+
+    }
+}
+
+@media (max-width: 890px) {
+
+    .fullscreen img {
+
+        width: 840px;
+
+    }
+}
+
+@media (max-width: 768px) {
+
+
+    .fullscreen img {
+
+        width: 718px;
+
+    }
+
+    .imageViewer img {
+
+        width: 660px;
+
+
+    }
+}
+
+@media (max-width: 700px) {
+    .fullscreen img {
+        position: absolute;
+        top: 50%;
+        width: 650px;
+
+    }
+
+    .imageViewer img {
+
+        width: 590px;
+        height: 500px;
+
+    }
+}
+
+@media (max-width: 640px) {
+    .fullscreen img {
+
+        width: 590px;
+
+    }
+
+    .imageViewer img {
+
+        width: 540px;
+        height: 440px;
+
+    }
+
+
+}
+
+@media (max-width: 576px) {
+
+    .fullscreen img {
+
+        width: 526px;
+
+    }
+
+    .imageViewer img {
+
+        width: 440px;
+        height: 360px;
+
+    }
+
+}
+
+@media (max-width: 500px) {
+
+    .fullscreen img {
+
+        width: 450px;
+
+    }
+
+    .imageViewer img {
+
+        width: 400px;
+        height: 320px;
+
+    }
+
+
+}
+
+@media (max-width: 460px) {
+    .fullscreen img {
+
+        width: 410px;
+
+    }
+
+    .imageViewer img {
+
+        width: 360px;
+        height: 300px;
+
+    }
+
+
+
+
+}
+
+@media (max-width: 410px) {
+
+    .fullscreen img {
+
+        width: 340px;
+
+
+    }
+
+    .imageViewer img {
+
+        width: 320px;
+        height: 280px;
+
+    }
+
+
+
+
+}
