--- a/src/index.css
+++ b/src/index.css
@@ -47,3 +47,107 @@
 
 
 }
+
+@media (max-width: 1340px) {
+
+
+    .content {
+        width: 992px;
+    }
+
+    .header {
+        height: 150px;
+    }
+}
+
+@media (max-width: 992px) {
+
+
+    .content {
+        width: 900px;
+    }
+}
+
+@media (max-width: 900px) {
+
+
+    .content {
+        width: 800px;
+    }
+
+    .flex-container {
+
+        justify-content: space-around;
+
+    }
+}
+
+@media (max-width: 768px) {
+
+
+    .content {
+        width: 700px;
+    }
+
+    .header {
+        height: 220px;
+    }
+}
+
+@media (max-width: 700px) {
+
+
+    .content {
+        width: 640px;
+    }
+}
+
+@media (max-width: 640px) {
+
+
+    .content {
+        width: 570px;
+    }
+
+
+}
+
+@media (max-width: 576px) {
+
+
+    .content {
+        width: 500px;
+    }
+}
+
+@media (max-width: 500px) {
+    .content {
+        width: 420px;
+    }
+
+    .header {
+        height: 360px;
+    }
+
+
+}
+
+@media (max-width: 450px) {
+    .content {
+        width: 400px;
+    }
+
+
+
+
+}
+
+@media (max-width: 400px) {
+    .content {
+        width: 350px;
+    }
+
+
+
+
+}
