--- a/src/components/furniture-list-item/Furniture-list-item.module.css
+++ b/src/components/furniture-list-item/Furniture-list-item.module.css
@@ -44,6 +44,16 @@
     width: 690px;
 }
 
+
+
+@media (max-width: 1200px) {
+
+
+    .flexForItem {
+        margin: 0 10px;
+    }
+}
+
 @media (max-width: 768px) {
 
 
